25-11-19 File06.c , 헤더 추가

--- a/Project04/Project04.vcxproj
+++ b/Project04/Project04.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="File04.c" />
+    <ClCompile Include="File06.c" />
     <ClCompile Include="Main.c" />
   </ItemGroup>
   <ItemGroup>
