25-11-19 기타 수정 사항 커밋

--- a/Project04/Project04.vcxproj
+++ b/Project04/Project04.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="exefuncsion.c" />
     <ClCompile Include="File04.c" />
     <ClCompile Include="File06.c" />
     <ClCompile Include="Main.c" />
