--- a/Project04/Project04.vcxproj.filters
+++ b/Project04/Project04.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="File06.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="exefuncsion.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
