--- a/Project04/Project04.vcxproj
+++ b/Project04/Project04.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{f05144a6-7a92-41ef-b28d-884d610651be}</ProjectGuid>
     <RootNamespace>Project04</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>ProjectFile</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
