25-11-19 폴더 이전 완료

--- a/ProJectFile/ProJectFile.vcxproj
+++ b/ProJectFile/ProJectFile.vcxproj
@@ -18,6 +18,15 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="exefuncsion.c" />
+    <ClCompile Include="File04.c" />
+    <ClCompile Include="File06.c" />
+    <ClCompile Include="Main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="main.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
