--- a/ProJectFile/ProJectFile.vcxproj.filters
+++ b/ProJectFile/ProJectFile.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="exefuncsion.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="File08.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
