--- a/ProJectFile/ProJectFile.vcxproj
+++ b/ProJectFile/ProJectFile.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="exefuncsion.c" />
     <ClCompile Include="File04.c" />
     <ClCompile Include="File06.c" />
+    <ClCompile Include="File07.c" />
     <ClCompile Include="File08.c" />
     <ClCompile Include="Main.c" />
   </ItemGroup>
