25-11-19 File22.c 기본 함수 작성 완료

--- a/ProJectFile/ProJectFile.vcxproj
+++ b/ProJectFile/ProJectFile.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="File06.c" />
     <ClCompile Include="File07.c" />
     <ClCompile Include="File08.c" />
+    <ClCompile Include="File22.c" />
     <ClCompile Include="Main.c" />
   </ItemGroup>
   <ItemGroup>
