--- a/ProJectFile/ProJectFile.vcxproj.filters
+++ b/ProJectFile/ProJectFile.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="File22.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Project22.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
